[package]
name = "perorustbot"
version = "0.1.3"
license = "MIT"
description = "My personal telegram bot in rust"
homepage = "https://github.com/PeroSar/perorustbot"
authors = ["PeroSar <perosar1111@gmail.com>"]
edition = "2021"

[dependencies]
teloxide = { version = "0.12.0", features = ["auto-send", "macros"] }
log = "0.4.17"
pretty_env_logger = "0.4.0"
tokio = { version =  "1.18", features = ["rt-multi-thread", "macros"] }
reqwest = { version = "0.11.10", features = ["json"] }
serde_json = "1.0.80"
librustbin = "0.1.0"
